--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,24 @@
+header{
+    background-color: var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+}
+
+.container__image{
+    padding: 1em;
+}
+
 .header__menu-burguer{
-    width: 24px;
+    width: 36px;
     height: 24px;
     background-image: url("../assets/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
