--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,18 @@
 @import url("header.css");
+@import url("banner.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
     --background-color: #EBECEE;
     --white: #FFFFFF;
+    --orange: #EB9B00;
+    --blue-gradient: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
+    --main-font: "Poppins", serif;
 }
 
 body{
     background-color: var(--background-color);
+    font-family: var(--main-font);
+    font-size: 1em;
+    font-weight: 400;
 }
