--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,20 @@
 @import url("header.css");
 @import url("banner.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("carousel.css");
+@import url("topics.css");
+@import url("contacts.css");
+@import url("footer.css");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
     --background-color: #EBECEE;
     --white: #FFFFFF;
     --orange: #EB9B00;
+    --blue: #002F52;
+    --black: #000000;
     --blue-gradient: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --main-font: "Poppins", serif;
+    --secondary-font: "Josefin Sans", serif;
 }
 
 body{
