--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -35,3 +35,24 @@
     background: url("../assets/Email.svg") no-repeat;
     padding-left: 2em;
 }
+
+@media screen and (min-width: 1024px) {
+    .contacts{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contacts__title{
+        font-size: 24px;
+    }
+
+    .contacts__description{
+        margin-right: 1em;
+        width: 30%;
+    }
+
+    .contacts__email{
+        width: 30%;
+    }
+}
