--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@
     --orange: #EB9B00;
     --blue: #002F52;
     --black: #000000;
+    --grey: #474646;
+    --light-grey: #858585;
     --blue-gradient: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --main-font: "Poppins", serif;
     --secondary-font: "Josefin Sans", serif;
