--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,3 +6,39 @@ footer{
     background-color: var(--white);
     padding: 1em;
 }
+
+.list-footer{
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    footer{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .footer__title{
+        font-size: 24px;
+    }
+
+    .list-footer{
+        display: block;
+    }
+
+    .list-footer__title{
+        font-size: 14px;
+        color: var(--light-grey);
+    }
+
+    .list-footer__item{
+        display: flex;
+        align-items: center;
+        margin: 0.6em 0
+    }
+
+    .list-footer__link{
+        color: var(--grey);
+        text-decoration: none;
+        margin-left: 0.6em;
+    }
+}
