--- a/styles/header.css
+++ b/styles/header.css
@@ -15,12 +15,24 @@ header{
     display: none;
 }
 
+.container__button:checked ~ .container__label > .header__menu-burguer{
+    background-image: url("../assets/Menu\ Aberto.svg");
+}
+
+.container__button:checked ~ .container__label{
+    background: var(--blue-gradient);
+}
+
 .container__button:checked ~ .list-menu{
     display: block;
 }
 
 .container__image{
     padding: 1em;
+}
+
+.container__text{
+    display: none;
 }
 
 .no-display{
@@ -64,6 +76,11 @@ header{
 
 @media screen and (min-width: 1024px){
 
+    .options__button:checked ~ .options__label > .options__item{
+        background: var(--blue-gradient);
+        color: var(--white);
+    }
+
     .container__title,
     .container__title--bold{
         font-family: var(--secondary-font);
@@ -88,7 +105,7 @@ header{
     }
 
     .options__item{
-        padding: 0 1em;
+        padding: 2em 1em;
         text-transform: uppercase;
     }
 
@@ -112,6 +129,15 @@ header{
 
     .options__button{
         display: none;
+    }
+
+    .list-menu__item:hover{
+        background: var(--blue-gradient);
+    }
+
+    .list-menu__item:hover > .list-menu__link{
+        -webkit-text-fill-color: var(--white);
+        text-decoration: none;
     }
 }
 
