--- a/styles/topics.css
+++ b/styles/topics.css
@@ -20,6 +20,12 @@
     margin: 2em 0.5em;
 }
 
+.item__link:hover{
+    background: transparent;
+    border: 1px solid var(--white);
+    transition: 0.6s;
+}
+
 .item__link{
     color: var(--white);
     padding: 1em;
@@ -36,5 +42,11 @@
 
     .item__link{
         font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1728px){
+    .topics{
+        padding: 3em 25vw;
     }
 }
